# calmweb

./: README.md  pyproject.toml  ruff.toml
calmweb_1.4.6/: calmweb_installer.spec  pyproject.toml
calmweb_1.4.6/installer/: calmweb.iss  info_after_install.txt  scheduled_task.xml
calmweb_1.4.6/scripts/: pyinstaller_entry.py
calmweb_1.4.6/src/calmweb/: config.py  parser.py  proxy.py  updater.py
calmweb_1.4.6/src/calmweb/platform/: __init__.py  windows.py
calmweb_1.4.6/tests/: test_config.py  test_proxy.py
filters/: blocklist.txt  remote_desktop.txt  whitelist.txt
installer/: calmweb.iss  info_after_install.txt  info_before_install.txt  scheduled_task.xml
scripts/: build.cmd
src/calmweb/: __init__.py  __main__.py  _version.py  config_io.py  installer.py  log.py  parser.py  proxy.py  resolver.py  single_instance.py  tray.py  updater.py
src/calmweb/platform/: windows.py
tests/: test_resolver.py  test_updater.py
