[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "CalmWeb"
version = "1.4.4"
description = "A system-wide web proxy filter to protect users from ads, scams, and remote control software"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.12"
dependencies = [
    "urllib3",
    "pillow",
    "pystray",
    "packaging",
    "pywin32; sys_platform == 'win32'",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
]

[project.scripts]
calmweb = "calmweb.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/calmweb"]
